<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <com.xujiaji.happybubble.BubbleLayout
        android:id="@+id/bubbleLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="16dp"
        app:lookAt="left"
        app:lookLength="16dp"
        app:lookPosition="36dp"
        app:lookWidth="16dp"
        app:bubbleArrowTopLeftRadius="6dp"
        app:bubbleArrowTopRightRadius="6dp"
        app:bubbleArrowDownLeftRadius="8dp"
        app:bubbleArrowDownRightRadius="8dp"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrow_pointing" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/rbLeft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/left"/>
                    <RadioButton
                        android:id="@+id/rbTop"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/up"/>

                    <RadioButton
                        android:id="@+id/rbRight"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/right"/>

                    <RadioButton
                        android:id="@+id/rbBottom"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/down"/>

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bubble_color_" />

                <View
                    android:id="@+id/cbWhite"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/white" />


                <View
                    android:id="@+id/cbGrey"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/darker_gray" />

                <View
                    android:id="@+id/cbBlack"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/black" />

                <View
                    android:id="@+id/cbRed"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/holo_red_light" />

                <View
                    android:id="@+id/cbOrange"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/holo_orange_light" />

                <View
                    android:id="@+id/cbBlue"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/holo_blue_light" />

                <View
                    android:id="@+id/cbGreen"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/holo_green_light" />

                <View
                    android:id="@+id/cbPurple"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/holo_purple" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shadow_color_" />

                <View
                    android:id="@+id/csWhite"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@drawable/white" />

                <View
                    android:id="@+id/csGrey"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/darker_gray" />

                <View
                    android:id="@+id/csBlack"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/black" />

                <View
                    android:id="@+id/csRed"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/holo_red_light" />

                <View
                    android:id="@+id/csOrange"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/holo_orange_light" />

                <View
                    android:id="@+id/csBlue"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/holo_blue_light" />

                <View
                    android:id="@+id/csGreen"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/holo_green_light" />

                <View
                    android:id="@+id/csPurple"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginLeft="8dp"
                    android:background="@android:color/holo_purple" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bubble_arc_" />

                <SeekBar
                    android:id="@+id/sbBubbleRadius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrow_position_" />

                <SeekBar
                    android:id="@+id/sbLookPosition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="500"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrow_width_" />

                <SeekBar
                    android:id="@+id/sbLookWidth"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/arrow_length_" />

                <SeekBar
                    android:id="@+id/sbLookLength"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="箭尖上左弧：" />

                <SeekBar
                    android:id="@+id/sbArrowTopLeftRadius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="箭尖上右弧：" />

                <SeekBar
                    android:id="@+id/sbArrowTopRightRadius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="箭尖下左弧：" />

                <SeekBar
                    android:id="@+id/sbArrowDownLeftRadius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="箭尖下右弧：" />

                <SeekBar
                    android:id="@+id/sbArrowDownRightRadius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shadow_arc_" />

                <SeekBar
                    android:id="@+id/sbShadowRadius"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shadow_x_offset" />

                <SeekBar
                    android:id="@+id/sbShadowX"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shadow_y_offset" />

                <SeekBar
                    android:id="@+id/sbShadowY"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:max="100"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnDialogTop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pop_dialog"/>

            <Button
                android:id="@+id/tvNextPage"
                android:text="@string/to_next_page_test"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bubble_table_info" />

        </LinearLayout>


    </ScrollView>

</LinearLayout>
